--- a/Arkanoid/Views/Home/Index.cshtml
+++ b/Arkanoid/Views/Home/Index.cshtml
@@ -2,7 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <canvas id="arkanoid" width=800 height=500></canvas>
+    }
+    else
+    {
+        <h1 class="display-4">Добро пожаловать в игру Arkanoid</h1>
+        <h2 class="display-5">Для того, чтобы начать играть, пожалуйста, авторизуйтесь.</h2>
+    }
 </div>
