--- a/Arkanoid/Views/Shared/_Layout.cshtml
+++ b/Arkanoid/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Records" asp-action="Index">Records</a>
+                        </li>
                     </ul>
                 </div>
             </div>
