feature: edit view model

--- a/Arkanoid/Views/Records/Index.cshtml
+++ b/Arkanoid/Views/Records/Index.cshtml
@@ -16,6 +16,9 @@
                 @Html.DisplayNameFor(model => model.UserID)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.RecordID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.UserName)
             </th>
             <th>
@@ -29,6 +32,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.UserID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RecordID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
