--- a/Arkanoid/Views/Records/Edit.cshtml
+++ b/Arkanoid/Views/Records/Edit.cshtml
@@ -12,11 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserID" class="control-label"></label>
-                <input asp-for="UserID" class="form-control" />
-                <span asp-validation-for="UserID" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="UserID" />
             <input type="hidden" asp-for="RecordID" />
             <div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
