--- a/Arkanoid/Views/Shared/Forbid.cshtml
+++ b/Arkanoid/Views/Shared/Forbid.cshtml
@@ -4,4 +4,4 @@
 }
 
 <h1 class="text-danger">403.</h1>
-<h2 class="text-danger">Forbidden.</h2>
+<h2 class="text-danger">Forbidden. You do not have access to this resource.</h2>
