--- a/Arkanoid/Views/Shared/_Layout.cshtml
+++ b/Arkanoid/Views/Shared/_Layout.cshtml
@@ -38,6 +38,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Records" asp-action="Index">Records</a>
                         </li>
+                        <li class="nav-item">
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admin page</a>
+                                }
+                            }
+                                </li>
                     </ul>
                 </div>
             </div>
