--- a/Arkanoid/Views/Records/Index.cshtml
+++ b/Arkanoid/Views/Records/Index.cshtml
@@ -16,15 +16,6 @@
     }
 }
 
-    <form asp-action="Index" method="get">
-        <div class="form-actions no-color">
-            <p>
-                Find by name: <input type="text" name="SearchString" value="@ViewData["currentFilter"]" />
-                <input type="submit" value="Search" class="btn btn-default" /> |
-                <a asp-action="Index">Back to Full List</a>
-            </p>
-        </div>
-    </form>
     <table class="table">
         <thead>
             <tr>
@@ -35,10 +26,10 @@
                     @Html.DisplayNameFor(model => model.RecordID)
                 </th>
                 <th>
-                    <a asp-action="Index" asp-route-sortOrder="@ViewData["UsernameSortParm"]">@Html.DisplayNameFor(model => model.UserName)</a>
+                    @Html.DisplayNameFor(model => model.UserName)
                 </th>
                 <th>
-                    <a asp-action="Index" asp-route-sortOrder="@ViewData["ScoreSortParm"]">@Html.DisplayNameFor(model => model.UserScore)</a>
+                    @Html.DisplayNameFor(model => model.UserScore)
                 </th>
                 <th></th>
             </tr>
